--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     // Implement Picasso for image rendering
     compile 'com.squareup.picasso:picasso:2.5.2'
 
+    // Implement recycler view for activity_main layout
+    compile 'com.android.support:recyclerview-v7:27.1.1'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
